@@ -1,5 +1,10 @@
 2006-02-27	Benedikt Meurer <benny@xfce.org>
 
+	* exo/exo-icon-view.c: Handle scrolling to a path before the view
+	  is realized/layouted.
+
+2006-02-27	Benedikt Meurer <benny@xfce.org>
+
 	* exo/exo-icon-view.c, exo/exo-tree-view.c: Also drop the prelit
 	  timeout defines.
 	* exo/exo-icon-view.c(exo_icon_view_button_press_event): Do not alter
